Fix slider size. Add invisible rectangle to make drag target bigger

--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -61,7 +61,7 @@
     }
 
     .vzb-tool-stepped-speed-slider {
-      flex: 0 0 25px;
+      flex: 0 0 35px;
     }
   }
 
