--- a/src/components/steppedspeedslider/_steppedspeedslider.scss
+++ b/src/components/steppedspeedslider/_steppedspeedslider.scss
@@ -1,7 +1,6 @@
 .vzb-stepped-speed-slider {
   position: relative;
   height: $size-timeslider-small;
-  margin-top: 5px;
 
   .vzb-stepped-speed-slider-triangle {
     cursor: pointer;
